--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@svgr/webpack": "^4.3.3",
     "autoprefixer": "^9.7.2",
     "babel-plugin-styled-components": "^1.10.6",
+    "babel-polyfill": "^6.26.0",
     "body-scroll-lock": "^2.6.4",
     "gatsby": "^2.17.17",
     "gatsby-cli": "^2.8.14",
