--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -76,6 +76,8 @@ jobs:
         run: npm install --force
       - name : Resolving envelop issue
         run : export NODE_OPTIONS=--openssl-legacy-provider
+      - name: Gatsby Clean First 
+        run: gatsby clean
       - name: Build with Gatsby
         env:
           PREFIX_PATHS: 'true'
