--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "scripts": {
     "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build",
+    "clean": "export NODE_OPTIONS=--openssl-legacy-provider;gatsby clean",
     "dev": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby develop ",
     "format": "npm run prettier -- --write",
     "lint": "eslint '**/*.{js,jsx,ts,tsx}' --fix",
