--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -76,8 +76,11 @@ jobs:
         run: npm install --force
       - name : Resolving envelop issue
         run : export NODE_OPTIONS=--openssl-legacy-provider
-      - name: Gatsby Clean First 
-        run: gatsby clean
+      - name: Clean gatsby
+        env:
+          PREFIX_PATHS: 'true'
+        run: ${{ steps.detect-package-manager.outputs.manager }} run clean
+
       - name: Build with Gatsby
         env:
           PREFIX_PATHS: 'true'
