adding more resources temperory

--- a/src/data/tutorials.yml
+++ b/src/data/tutorials.yml
@@ -43,3 +43,67 @@
     - cloud learning
     - aws learning
     - Freemium
+
+- title: 'Automating Amazon Web Services(AWS) with Lambda, Python, and Boto3'
+  link: https://medium.com/@adilshehzad786/automating-amazon-web-services-aws-with-lambda-python-and-boto3-36311ca97881
+  formats:
+    - text
+  language: en
+  date: 2022-11-25
+  authors:
+    - Adil Shehzad
+  source: 'https://github.com/adilshehzad786'
+  topics:
+    - aws
+    - aws developer
+    - cloud learning
+    - aws learning
+    - Freemium
+  
+- title: 'Automating Amazon Web Services(AWS) with Lambda, Python, and Boto3'
+  link: https://medium.com/@adilshehzad786/automating-amazon-web-services-aws-with-lambda-python-and-boto3-36311ca97881
+  formats:
+    - text
+  language: en
+  date: 2022-11-25
+  authors:
+    - Adil Shehzad
+  source: 'https://github.com/adilshehzad786'
+  topics:
+    - aws
+    - aws developer
+    - cloud learning
+    - aws learning
+    - Freemium
+
+- title: 'Automating Amazon Web Services(AWS) with Lambda, Python, and Boto3'
+  link: https://medium.com/@adilshehzad786/automating-amazon-web-services-aws-with-lambda-python-and-boto3-36311ca97881
+  formats:
+    - text
+  language: en
+  date: 2022-11-25
+  authors:
+    - Adil Shehzad
+  source: 'https://github.com/adilshehzad786'
+  topics:
+    - aws
+    - aws developer
+    - cloud learning
+    - aws learning
+    - Freemium
+    
+- title: 'Automating Amazon Web Services(AWS) with Lambda, Python, and Boto3'
+  link: https://medium.com/@adilshehzad786/automating-amazon-web-services-aws-with-lambda-python-and-boto3-36311ca97881
+  formats:
+    - text
+  language: en
+  date: 2022-11-25
+  authors:
+    - Adil Shehzad
+  source: 'https://github.com/adilshehzad786'
+  topics:
+    - aws
+    - aws developer
+    - cloud learning
+    - aws learning
+    - Freemium
