--- a/src/data/tutorials.yml
+++ b/src/data/tutorials.yml
@@ -403,7 +403,7 @@
     - aws
     - cloudskills
     - devops
-    beginners
+    - beginners
 - title: 'AWS NLP Newsletter Archive Directory'
   link: https://dev.to/aws/aws-nlp-newsletter-archive-directory-mj2
   formats:
